"The full project has been finished with all possible finish touches. CSS/HTML changes yet to be made in the future."

--- a/CloudCat/Areas/Admin/Views/_ViewImports.cshtml
+++ b/CloudCat/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CloudCat
 @using CloudCat.Models
 @using CloudCat.Models.ViewModels
+@using CloudCat.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
