--- a/CloudCat/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/CloudCat/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using CloudCat.Areas.Identity
 @using CloudCat.Areas.Identity.Pages
+@using CloudCat.Utility
+@using CloudCat.Models
+@using CloudCat.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
