--- a/CloudCat/Areas/Customer/Views/_ViewImports.cshtml
+++ b/CloudCat/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CloudCat
 @using CloudCat.Models
 @using CloudCat.Models.ViewModels
+@using CloudCat.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
