"Added search bar functionality in home page to search books."

--- a/CloudCat/Views/Shared/_Layout.cshtml.css
+++ b/CloudCat/Views/Shared/_Layout.cshtml.css
@@ -1,6 +1,11 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+.logo {
+    width: 50px; /* Adjust the width as needed */
+    height: auto; /* Maintain the aspect ratio */
+}
 a.navbar-brand {
   white-space: normal;
   text-align: center;
