--- a/CloudCat/Views/Shared/_Layout.cshtml
+++ b/CloudCat/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="text-center">
-            Made by CloudCat team with <i class="bi bi-chat-heart"></i>
+            Made by CloudCat team
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
